--- a/resources.html
+++ b/resources.html
@@ -33,7 +33,7 @@ Student Resources
                         <span class="toggle-icon"></span>
                     </button>
                     <div class="logo">
-                        <a class="logo-wrap" href="home.html">
+                        <a class="logo-wrap" href="index.html">
                             <img class="logo-img logo-img-main" src="img/logo.png" alt="Logo">
                             <img class="logo-img logo-img-active" src="img/logo.png" alt="Logo">
                         </a>
@@ -43,7 +43,7 @@ Student Resources
                 <div class="collapse navbar-collapse nav-collapse">
                     <div class="menu-container">
                         <ul class="nav navbar-nav navbar-nav-right">
-                            <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="home.html">Home</a></li>
+                            <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="index.html">Home</a></li>
                             <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="aboutme.html">About Me & CV</a></li>
                             <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="work.html">Work & Experience</a></li>
                             <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="outreach.html">Events & Outreach</a></li>
@@ -1569,7 +1569,7 @@ Student Resources
                                 </div>
                                 <div class="col-md-3 col-xs-6">
                                     <h5>Web</h5>
-                                    <a href="home.html">agtaz19@github.io</a>
+                                    <a href="index.html">agtaz19@github.io</a>
                                 </div>
                             </div>
                         </div>
