--- a/aboutme.html
+++ b/aboutme.html
@@ -45,7 +45,7 @@ About Me in Depth
 
                     <!-- Logo -->
                     <div class="logo">
-                        <a class="logo-wrap" href="home.html">
+                        <a class="logo-wrap" href="index.html">
                             <img class="logo-img logo-img-main" src="img/logo.png" alt="Logo">
                             <img class="logo-img logo-img-active" src="img/logo.png" alt="Logo">
                         </a>
@@ -58,7 +58,7 @@ About Me in Depth
                     <div class="menu-container">
                         <ul class="nav navbar-nav navbar-nav-right">
                             <li class="js_nav-item nav-item">
-                                <a class="nav-item-child nav-item-hover" href="home.html">Home</a>
+                                <a class="nav-item-child nav-item-hover" href="index.html">Home</a>
                             </li>
                             <li class="js_nav-item nav-item">
                                 <a class="nav-item-child nav-item-hover" href="aboutme.html">About Me & CV</a>
@@ -390,7 +390,7 @@ About Me in Depth
                                 </div>
                                 <div class="col-md-3 col-xs-6">
                                     <h5>Web</h5>
-                                        <a href="home.html">agtaz19@github.io</a>
+                                        <a href="index.html">agtaz19@github.io</a>
                                 </div>
                             </div>
                         </div>
