--- a/aboutme.html
+++ b/aboutme.html
@@ -7,6 +7,7 @@ About Me in Depth
     <head>
         <meta charset="utf-8"/>
         <title>About - Tilly, Alexandre</title>
+        <link rel="icon" href="img/logo.png" type="image/png">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
         <meta content="" name="description"/>
