--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ Home Landing page:
     <head>
         <meta charset="utf-8"/>
         <title>Home - Tilly, Alexandre</title>
+        <link rel="icon" href="img/logo-white.png" type="image/png">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
         <meta content="" name="description"/>
