--- a/outreach.html
+++ b/outreach.html
@@ -6,6 +6,7 @@ Events & Outreach
     <head>
         <meta charset="utf-8"/>
         <title>Events & Outreach - Tilly, Alexandre</title>
+        <link rel="icon" href="img/logo-white.png" type="image/png">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
 
