--- a/resources.html
+++ b/resources.html
@@ -93,7 +93,7 @@ About Me:
 
         <!--========== PAGE LAYOUT ==========-->
         <main>
-            <section id="resources" class="container content-lg">
+            <section id="resources" class="container content-sm">
                 <div class="col-xs-12">
                     <h1>
                         Useful Resources
