--- a/publication.html
+++ b/publication.html
@@ -8,6 +8,7 @@ Publications & Research:
     <head>
         <meta charset="utf-8"/>
         <title>Publications & Research - Tilly, Alexandre</title>
+        <link rel="icon" href="img\logo-white.png" type="image/png">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
         <meta content="" name="description"/>
