--- a/resources.html
+++ b/resources.html
@@ -36,7 +36,7 @@ About Me:
     <body id="body" data-spy="scroll" data-target=".header">
 
         <!--========== HEADER ==========-->
-        <header class="header navbar-fixed">
+        <header class="header navbar-fixed-top">
             <!-- Navbar -->
             <nav class="navbar" role="navigation">
                 <div class="container">
@@ -94,7 +94,7 @@ About Me:
 
         <!--========== PAGE LAYOUT ==========-->
         <main>
-            <section id="resources" class="container content-sm">
+            <section id="resources" class="container content-lg">
                 <div class="col-xs-12">
                     <h1>
                         Useful Resources
