--- a/resources.html
+++ b/resources.html
@@ -94,7 +94,7 @@ About Me:
 
         <!--========== PAGE LAYOUT ==========-->
         <main>
-            <section id="resources" class="container content-lg">
+            <div id="resources" class="container content-lg">
                 <div class="col-xs-12">
                     <h1>
                         Useful Resources
@@ -120,7 +120,7 @@ About Me:
                     </nav>
 
                 </div>
-            </section>
+            </div>
 
             <!--========== CODING ==========-->
             <section id="coding" class="container">
